# my_python_project

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
my_python_project/: adder_class.py  llama_model.py  llm_model.py  main.py
src/: main.py
tests/: test_adder_class.py  test_llm_model.py  test_main.py
