[tool.black]
line-length = 88

[tool.pylint]
load-plugins = ["pylint_flask"]
disable = ["C0114", "C0115", "C0116"]

[tool.mypy]
files = "my_python_project"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-python-project"
version = "0.1.0"
description = "A sample Python project"
authors = [
    { name = "Daniel Driver", email = "dandriver@gmail.com" }
]
dependencies = [
    "transformers>=4.0.0",
    "torch>=1.7.0"
]

[project.optional-dependencies]
    dev = [
        "pytest>=6.2.4",
        "pylint>=2.7.4",
        "mypy>=0.812",
        "black>=21.5b1",
        "flake8>=3.9.2",
        "pytest-cov>=2.12.1"
    ]